--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "mdb-boilerplate",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "A complete production ready boilerplate for MDBootstrap and webpack",
-  "main": "./src/app.js",
+  "main": "src/js/app.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --progress --color",
+    "dev": "webpack-dev-server --mode development --progress --color",
+    "prod": "webpack --mode production",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -19,65 +21,58 @@
     "bootstrap"
   ],
   "author": {
-    "name": "Arnt Pedersen",
-    "email": "arnt@gomap.no",
-    "url": "https://www.google.com"
+    "name": "Arnt Oddvar Pedersen",
+    "email": "arnt.o.pedersen@gmail.com",
+    "url": "https://www.nanoweb.no",
+    "company": "Nanoweb AS"
   },
-  "private": false,
   "maintainers": [
-    "Arnt Pedersen"
+    "Arnt Oddvar Pedersen"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SpellCraft/mdb-boilerplate.git"
+  },
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-do-expressions": "^7.2.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-function-bind": "^7.2.0",
-    "@babel/plugin-proposal-function-sent": "^7.2.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "babel-preset-airbnb": "^3.2.1",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-airbnb": "^5.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "file-loader": "^3.0.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^3.5.3",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
-    "airbnb-browser-shims": "^3.2.1",
-    "bootstrap": "^4.3.1",
-    "datatables.net-bs4": "^1.10.19",
-    "jquery": "^3.4.1",
-    "mdbootstrap": "^4.8.2",
-    "popper.js": "^1.15.0"
+    "@babel/runtime": "^7.9.6",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "core-js": "^3.6.5",
+    "datatables.net": "^1.10.21",
+    "jquery": "^3.5.1",
+    "mdbootstrap": "^4.18.0",
+    "popper.js": "^1.16.1",
+    "regenerator-runtime": "^0.13.5"
   }
 }
